# coffee

./: .gitignore  Cargo.toml  LICENSE  README.md
coffee-client/: Cargo.toml
coffee-client/src/: error.rs  main.rs
coffee-common/: Cargo.toml  build.rs
coffee-common/proto/: coffee.proto
coffee-common/src/: db.rs  lib.rs
coffee-rpc-server/: Cargo.toml
coffee-rpc-server/src/: main.rs  rpc.rs
coffee-web-server/: Cargo.toml
coffee-web-server/src/: main.rs
coffee-web-server/templates/: coffee.html
