[package]
name = "coffee-client"
version = "0.1.0"
authors = ["ryan"]
edition = "2018"

[dependencies]
coffee-common = {path = "../coffee-common"}

clap = "2.33"
dirs = "2.0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tonic = "0.2.0"
tokio = { version = "0.2", features = ["macros"] }
