[package]
name = "coffee-common"
version = "0.1.0"
authors = ["ryan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
rust-crypto = "0.2"
sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "sqlite" ] }
tonic = "0.2.0"
tokio = { version = "0.2", features = ["macros"] }

[build-dependencies]
tonic-build = "0.2"